--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/LiaoJimmy/vuex-model-helper/issues"
   },
-  "homepage": "https://github.com/LiaoJimmy/vuex-model-helper#readme"
+  "homepage": "https://github.com/LiaoJimmy/vuex-model-helper#readme",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0"
+  }
 }
