--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "vuex-model-helper",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Vuex model helper",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
+    "build": "babel src -d dist --presets babel-preset-stage-2",
     "test": "jest"
   },
   "repository": {
@@ -23,5 +24,9 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.11.0"
+  },
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-stage-2": "^6.24.1"
   }
 }
