--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,31 @@
 {
+  "env": {
+    "test": {
+      "plugins": [
+        "transform-es2015-modules-commonjs",
+        "dynamic-import-node"
+      ],
+      "presets": [
+        "env",
+        "stage-2"
+      ]
+    }
+  },
+  "plugins": [],
   "presets": [
+    [
+      "env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": [
+            "> 1%",
+            "last 2 versions",
+            "not ie <= 8"
+          ]
+        }
+      }
+    ],
     "stage-2"
-  ],
-  "plugins": []
+  ]
 }
