--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuex-model-helper",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Vuex model helper",
   "main": "./dist/index.js",
   "scripts": {
@@ -33,5 +33,10 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-stage-2": "^6.24.1"
-  }
+  },
+  "files": [
+    "dist/",
+    "README.md",
+    "package.json"
+  ]
 }
