--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "babel src -d dist --presets babel-preset-stage-2",
+    "lint": "eslint --ext .js src test",
     "test": "jest --config test/jest.conf.js --coverage"
   },
   "repository": {
